--- a/2023_Graduate_Project/View/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/Main.storyboard
@@ -1470,7 +1470,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FHv-bQ-Rx2" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-5448" y="235"/>
+            <point key="canvasLocation" x="-5448.75" y="233.97887323943661"/>
         </scene>
     </scenes>
     <resources>
